# JuceApp

./: App.tsx  AudioModule.ts  app.json  package-lock.json  package.json
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  JuceAudioJNI.cpp
android/app/src/main/java/com/juceaudioapp/: AudioModule.kt  AudioPackage.kt  MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/JuceAudioApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/JuceAudioApp.xcodeproj/: project.pbxproj
ios/JuceAudioApp.xcodeproj/xcshareddata/xcschemes/: JuceAudioApp.xcscheme
